re #613 fixed multiple IE bugs, and other bugs related to the uploader: * Bottom margin from "HTML5 or flash player required to upload files" message removed, styling updated. * "Create Documents" button show/hide by css, instead of js, to make sure it's never shown or hidden when it shouldn't. * Fixed flash uploader bug specific to j30 where <body> element padding would offset the flash element overlay, making the "Choose Files" button no longer work. * Fixed flash uploader bug on all IE versions that made the "Choose Files" button no longer work at all. * Flash uploader no longer displays "Drop files here" message by accident. * Uploader tested working on IE8, IE9 and IE10.
Previous work is what broke the uploader in IE9 and like, code like SqueezeBox specific code got removed at some point, unknowingly breaking IE fixes.

--- a/code/media/koowa/com_files/less/koowa/_files.less
+++ b/code/media/koowa/com_files/less/koowa/_files.less
@@ -508,6 +508,7 @@ li.plupload_droptext {
     padding: 1em 0.4em;
     font-size: 1.4em;
     text-align: center;
+    margin-bottom: 0px;
 }
 #files-uploader-web form {
     padding: 2px;
